Parse generic type of list

--- a/build.gradle
+++ b/build.gradle
@@ -10,7 +10,11 @@ repositories {
 }
 
 test {
-    testLogging.showStandardStreams = true
+    testLogging {
+        events "failed"
+        exceptionFormat "full"
+        showStandardStreams true
+    }
     useJUnitPlatform()
 }
 
