--- a/build.gradle
+++ b/build.gradle
@@ -23,7 +23,7 @@ dependencies {
             "org.junit.jupiter:junit-jupiter-api:5.0.0-M4",
             "org.hamcrest:hamcrest-library:2.1",
             "org.junit.jupiter:junit-jupiter-engine:5.5.2",
+            "org.junit.jupiter:junit-jupiter-params:5.4.2",
+            "com.shazam:shazamcrest:0.1"
     )
-    testCompile group: 'com.shazam', name: 'shazamcrest', version: '0.1'
-
 }
