--- a/build.gradle
+++ b/build.gradle
@@ -1,12 +1,28 @@
+
+buildscript {
+    repositories {
+        mavenCentral()
+    }
+    dependencies {
+        classpath 'com.vanniktech:gradle-maven-publish-plugin:0.8.0'
+    }
+}
+
 plugins {
     id 'java'
-    id 'maven-publish'
+    id 'com.vanniktech.maven.publish' version "0.11.1"
+    id 'signing'
 }
+
 
 group 'io.github.furstenheim'
 version '1.0'
 
 repositories {
+    maven {
+        url "https://plugins.gradle.org/m2/"
+    }
+
     mavenCentral()
 }
 
@@ -29,14 +45,3 @@ dependencies {
     )
 }
 
-publishing {
-    publications {
-        maven(MavenPublication) {
-            groupId = 'io.github.furstenheim'
-            artifactId = 'challenger'
-            version = '1.0'
-
-            from components.java
-        }
-    }
-}
